pushing last version

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,12 @@
+
 spring.jpa.database=POSTGRESQL
 spring.datasource.platform=postgres
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.database.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://ec2-54-235-246-220.compute-1.amazonaws.com:5432/dfks9gmjql058j?sslmode=require
-spring.datasource.username=kfmvpnqtpkchjp
-spring.datasource.password=Bedk1zlEwU46j1IDsLdPB414c0
+spring.datasource.url=jdbc:postgresql://localhost:5432/stridslogg
+spring.data.rest.basePath=/hateoas
+spring.datasource.username=admin
+spring.datasource.password=admin123
 spring.http.multipart.max-file-size=20MB
 spring.http.multipart.max-request-size=20MB
