First deploy commit

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,4 @@ spring.datasource.username=admin
 spring.datasource.password=admin123
 spring.http.multipart.max-file-size=20MB
 spring.http.multipart.max-request-size=20MB
+server.port=80
