--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,4 +10,18 @@ spring.datasource.username=admin
 spring.datasource.password=admin123
 spring.http.multipart.max-file-size=20MB
 spring.http.multipart.max-request-size=20MB
-server.port=80
+
+
+# Define a custom port instead of the default 8080
+server.port=8081
+
+# Tell Spring Security (if used) to require requests over HTTPS
+security.require-ssl=true
+
+# The path to the keystore containing the certificate
+server.ssl.key-store=keystore.jks
+# The password used to generate the certificate
+server.ssl.key-store-password=Password99
+# The alias mapped to the certificate
+server.ssl.key-alias=stridslogg
+
