Commit before merge

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,7 @@ spring.http.multipart.max-request-size=20MB
 
 
 # Define a custom port instead of the default 8080
-server.port=8081
+server.port=8080
 
 # Tell Spring Security (if used) to require requests over HTTPS
 security.require-ssl=true
@@ -23,5 +23,5 @@ server.ssl.key-store=keystore.jks
 # The password used to generate the certificate
 server.ssl.key-store-password=Password99
 # The alias mapped to the certificate
-server.ssl.key-alias=stridslogg
+server.ssl.key-alias=stridsjournal
 
